--- a/appcenubbroyler/appcenubbroyler.Android/appcenubbroyler.Android.csproj
+++ b/appcenubbroyler/appcenubbroyler.Android/appcenubbroyler.Android.csproj
@@ -56,6 +56,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.7.335</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Design">
       <Version>28.0.0.3</Version>
     </PackageReference>
