--- a/appcenubbroyler/appcenubbroyler.UWP/appcenubbroyler.UWP.csproj
+++ b/appcenubbroyler/appcenubbroyler.UWP/appcenubbroyler.UWP.csproj
@@ -146,6 +146,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.7.335</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.1874" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.11" />
   </ItemGroup>
