--- a/appcenubbroyler/appcenubbroyler.iOS/appcenubbroyler.iOS.csproj
+++ b/appcenubbroyler/appcenubbroyler.iOS/appcenubbroyler.iOS.csproj
@@ -165,6 +165,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.7.335</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.1874" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
